--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -125,9 +125,11 @@
         <ng-container matColumnDef="requestTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
-              <label for="requestTimeInput" class="m-2" mat-sort-header disableClear>Request Time</label>
-              <input id="requestTimeInput" matInput class="w-30" formControlName="requestTime" type="date"
-                     bindQueryParam="requestTime">
+              <label for="requestTimeStart" class="m-2" mat-sort-header disableClear>Request Time</label>
+              <input id="requestTimeStart" matInput class="w-30" formControlName="requestTimeStart" type="date"
+                     [max]="searchCriteria.get('requestTimeEnd')?.getRawValue()" bindQueryParam="requestTime">
+              <input id="requestTimeEnd" matInput class="w-30" formControlName="requestTimeEnd" type="date"
+                     [min]="searchCriteria.get('requestTimeStart')?.getRawValue()" bindQueryParam="requestTime">
             </div>
           </th>
           <td mat-cell
