--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -9,7 +9,16 @@
     <!-- Value Column -->
     <ng-container matColumnDef="value">
       <th mat-header-cell *matHeaderCellDef>Value</th>
-      <td mat-cell *matCellDef="let element">{{element.value}}</td>
+      <td mat-cell *matCellDef="let element">
+        <ng-container [ngSwitch]="element.key">
+          <ng-container *ngSwitchCase="'loadNumber'">
+            <a routerLink="/load-versions" [queryParams]="{loadNumber:element.value, expand:true}">{{element.value}}</a>
+          </ng-container>
+          <ng-container *ngSwitchDefault>
+            {{element.value}}
+          </ng-container>
+        </ng-container>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
