--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -6,7 +6,8 @@
       <ng-container matColumnDef="requestId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request ID</th>
         <td mat-cell *matCellDef="let row">
-          <a routerLink="/load-requests" [queryParams]="{requestId:row.requestId}">{{row.requestId}} </a></td>
+          <a routerLink="/load-requests" [queryParams]="{requestId:row.requestId,expand:true}">{{row.requestId}} </a>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="loadNumber">
