--- a/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
+++ b/projects/ts-etl-ui/src/load-request-activity/load-request-activity.component.html
@@ -4,7 +4,7 @@
     <mat-label>Filter Activity</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Complete" #input>
   </mat-form-field>
-  <table mat-table [dataSource]="dataSource" matSort class="my-expanded-table">
+  <table mat-table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="componentName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Component name</th>
       <td mat-cell *matCellDef="let element"> {{element.componentName}} </td>
