--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -141,7 +141,7 @@
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
               <label for="requesterInput" class="m-2" mat-sort-header disableClear>Requester</label>
-              <input id="requesterInput" matInput class="w-40" formControlName="requester" placeholder="subject...">
+              <input id="requesterInput" matInput class="w-40" formControlName="requester" placeholder="requester...">
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requester}}</td>
