--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -138,17 +138,26 @@
         </ng-container>
 
         <ng-container matColumnDef="requester">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Requester
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requesterInput" class="m-2" mat-sort-header disableClear>Requester</label>
+              <input id="requesterInput" matInput class="w-40" formControlName="requester" placeholder="requester...">
+            </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requester}}</td>
         </ng-container>
 
         <ng-container matColumnDef="creationTime">
           <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Creation Time
+            <div class="flex flex-col m-2">
+              <label for="creationTimeStart" class="m-2" mat-sort-header disableClear>Creation Time</label>
+              <input id="creationTimeStart" matInput class="w-30" formControlName="creationTimeStart" type="date"
+                     [max]="searchCriteria.get('creationTimeEnd')?.getRawValue()">
+              <input id="creationTimeEnd" matInput class="w-30" formControlName="creationTimeEnd" type="date"
+                     [min]="searchCriteria.get('creationTimeStart')?.getRawValue()">
+            </div>
           </th>
-          <td mat-cell *matCellDef="let row">{{row.creationTime}}</td>
+          <td mat-cell *matCellDef="let row">{{row.creationTime | date:'yyyy/MM/dd hh:mma':'GMT+05:00'}}</td>
         </ng-container>
 
         <ng-container matColumnDef="expandedDetail">
