--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -1,162 +1,200 @@
-<div class="flex justify-between m-5">
-  <form [formGroup]="searchCriteria" class="flex justify-between">
-    <mat-form-field>
-      <mat-label>Filter by all fields</mat-label>
-      <input matInput formControlName="filterTerm" placeholder="Ex. LOINC" #filterTerm>
-      <button *ngIf="filterTerm.value" matSuffix mat-icon-button aria-label="Clear"
-              (click)="onClear()">
-        <mat-icon>close</mat-icon>
+<form [formGroup]="searchCriteria">
+  <div class="flex justify-between mx-5">
+    <div class="flex justify-between">
+      <mat-form-field>
+        <mat-label>Any Request date</mat-label>
+        <mat-select placeholder="Any Request date" formControlName="requestDateRange">
+          <mat-option value="">Any Request date</mat-option>
+          <mat-option value="today">Today's</mat-option>
+          <mat-option value="thisWeek">This week's</mat-option>
+          <mat-option value="lastWeek">Last week's</mat-option>
+          <mat-option value="thisMonth">This month's</mat-option>
+          <mat-option value="lastMonth">Last month's</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>All Requests</mat-label>
+        <mat-select placeholder="All Requests" formControlName="requestType">
+          <mat-option value="">All Requests</mat-option>
+          <mat-option [value]="user?.utsUser!.username">My Requests</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button mat-fab extended color="primary" type="submit">
+        <mat-icon fontIcon="search"></mat-icon>
+        Search
       </button>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Any Request date</mat-label>
-      <mat-select placeholder="Any Request date" formControlName="requestDateType">
-        <mat-option value="0">Any Request date</mat-option>
-        <mat-option value="1">Today's requests</mat-option>
-        <mat-option value="2">Requests of this week</mat-option>
-        <mat-option value="3">Requests of last week</mat-option>
-        <mat-option value="4">Requests of this month</mat-option>
-        <mat-option value="5">Requests of last month</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>All Requests</mat-label>
-      <mat-select placeholder="All Requests" formControlName="requestType">
-        <mat-option value="0">All Requests</mat-option>
-        <mat-option value="1">My Requests</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button mat-fab extended color="primary" type="submit">
-      <mat-icon fontIcon="search"></mat-icon>
-      Search
-    </button>
-    <button mat-fab extended type="reset">
-      <mat-icon fontIcon="clear"></mat-icon>
-      Reset
-    </button>
-  </form>
-  <div class="flex align-middle">
-    <button mat-fab extended color="primary" (click)="openCreateLoadRequestModal()">
-      <mat-icon fontIcon="add"></mat-icon>
-      Create Request
-    </button>
-    <button mat-fab extended color="primary">
-      <mat-icon fontIcon="file_download"></mat-icon>
-      Download
-    </button>
-  </div>
-</div>
-
-<div class="example-container mat-elevation-z8 m-5">
-  <div class="example-loading-shade" *ngIf="isLoadingResults">
-    <mat-spinner></mat-spinner>
+      <button mat-fab extended routerLink="/load-requests" type="reset">
+        <mat-icon fontIcon="clear"></mat-icon>
+        Reset
+      </button>
+    </div>
+    <div class="flex align-middle">
+      <button mat-fab extended color="primary" (click)="openCreateLoadRequestModal()">
+        <mat-icon fontIcon="add"></mat-icon>
+        Create Request
+      </button>
+      <button mat-fab extended color="primary" (click)="download()">
+        <mat-icon fontIcon="file_download"></mat-icon>
+        Download
+      </button>
+    </div>
   </div>
 
-  <div class="example-table-container">
-    <table mat-table [dataSource]="data" class="example-table" multiTemplateDataRows
-           matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc">
+  <div class="mat-elevation-z8 ">
+    <div class="example-table-container">
+      <table mat-table [dataSource]="data()" class="example-table" multiTemplateDataRows
+             matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc"
+             (matSortChange)="handleSortEvent($event)">
 
-      <ng-container matColumnDef="requestId">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request ID</th>
-        <td mat-cell *matCellDef="let row">{{row.requestId}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="codeSystemName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Code System Name</th>
-        <td mat-cell *matCellDef="let row">{{row.codeSystemName}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="sourceFilePath">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Source File Path
-        </th>
-        <td mat-cell *matCellDef="let row">{{row.sourceFilePath}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="requestSubject">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Request Subject
-        </th>
-        <td mat-cell *matCellDef="let row">{{row.requestSubject}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="requestStatus">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Request Status
-        </th>
-        <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="version">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Version
-        </th>
-        <td mat-cell *matCellDef="let row">{{row.version}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="availableDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Available Date
-        </th>
-        <td mat-cell *matCellDef="let row">{{row.availableDate}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="requester">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Requester
-        </th>
-        <td mat-cell *matCellDef="let row">{{row.requester}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="requestTime">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-          Request Time
-        </th>
-        <td mat-cell *matCellDef="let row">{{row.requestTime}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="expand">
-        <th mat-header-cell *matHeaderCellDef aria-label="row actions">Request Activity Detail</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-flat-button aria-label="expand row" color="primary"
-                  (click)="fetchLoadRequestActivity($event,element)">
-            <ng-container *ngIf="expandedElement === element; else expandTemplate">
-              <mat-icon fontIcon="keyboard_arrow_up"></mat-icon>
-            </ng-container>
-            <ng-template #expandTemplate>
-              <mat-icon fontIcon="keyboard_arrow_down"></mat-icon>
-            </ng-template>
-          </button>
-        </td>
-      </ng-container>
-
-      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-      <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand.length">
-          <div class="example-element-detail"
-               [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
-            <div class="example-element-description" *ngIf="expandedElement === row">
-              <app-load-request-activity [requestId]="row.requestId"></app-load-request-activity>
+        <ng-container matColumnDef="requestId">
+          <th mat-header-cell *matHeaderCellDef>
+            <div class="flex flex-col m-2">
+              <label for="requestIdFilterInput" class="m-2" mat-sort-header disableClear>Request ID</label>
+              <input id="requestIdFilterInput" class="w-3/4" matInput formControlName="requestId" placeholder="Ex. 148"
+                     type="number">
             </div>
-          </div>
-        </td>
-      </ng-container>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.requestId}}</td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
-      <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand;"
-          class="example-element-row"
-          [class.example-expanded-row]="expandedElement === row">
-      </tr>
-      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+        <ng-container matColumnDef="codeSystemName">
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="codeSystemSearch" class="m-2" mat-sort-header disableClear>Code System Name</label>
+              <select id="codeSystemSearch" class="w-20" formControlName="codeSystemName">
+                <option value="">ALL</option>
+                <option>RXNORM</option>
+                <option>LOINC</option>
+                <option>SNOMEDCT</option>
+                <option>CDCREC</option>
+                <option>CPT</option>
+                <option>HPO</option>
+              </select>
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.codeSystemName}}</td>
+        </ng-container>
 
-      <tr *matNoDataRow>
-        <td class="mat-cell" colspan="9">
-          No results found.
-        </td>
-      </tr>
-    </table>
+        <ng-container matColumnDef="requestSubject">
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="subjectInput" class="m-2" mat-sort-header disableClear>Subject</label>
+              <input id="subjectInput" matInput class="w-40" formControlName="requestSubject" placeholder="subject...">
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.requestSubject}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="requestStatus">
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requestStatusInput" class="m-2" mat-sort-header disableClear>Status</label>
+              <select id="requestStatusInput" class="w-20" formControlName="requestStatus">
+                <option value="">ALL</option>
+                <option>In Progress</option>
+                <option>Complete</option>
+                <option>Failed</option>
+              </select>
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="type">
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requestTypeInput" class="m-2" mat-sort-header disableClear>Request Type</label>
+              <select id="requestTypeInput" class="w-20" formControlName="type">
+                <option value="">ALL</option>
+                <option>regular</option>
+                <option>scheduled</option>
+                <option>emergency</option>
+                <option>masterJob</option>
+              </select>
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.type}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="requestTime">
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requestTimeStart" class="m-2" mat-sort-header disableClear>Request Time</label>
+              <input id="requestTimeStart" matInput class="w-30" formControlName="requestTimeStart" type="date"
+                     [max]="searchCriteria.get('requestTimeEnd')?.getRawValue()">
+              <input id="requestTimeEnd" matInput class="w-30" formControlName="requestTimeEnd" type="date"
+                     [min]="searchCriteria.get('requestTimeStart')?.getRawValue()">
+            </div>
+          </th>
+          <td mat-cell
+              *matCellDef="let row">{{row.requestTime.replace(' ', '') | date:'yyyy/MM/dd hh:mma':'GMT+05:00' }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="availableDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+            Available Date
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.availableDate}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="requester">
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requesterInput" class="m-2" mat-sort-header disableClear>Requester</label>
+              <input id="requesterInput" matInput class="w-40" formControlName="requester" placeholder="requester...">
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.requester}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="creationTime">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+            <div class="flex flex-col m-2">
+              <label for="creationTimeStart" class="m-2" mat-sort-header disableClear>Creation Time</label>
+              <input id="creationTimeStart" matInput class="w-30" formControlName="creationTimeStart" type="date"
+                     [max]="searchCriteria.get('creationTimeEnd')?.getRawValue()">
+              <input id="creationTimeEnd" matInput class="w-30" formControlName="creationTimeEnd" type="date"
+                     [min]="searchCriteria.get('creationTimeStart')?.getRawValue()">
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.creationTime | date:'yyyy/MM/dd hh:mma':'GMT+05:00'}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="expandedDetail">
+          <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
+            <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
+              <div class="example-element-description" *ngIf="expandedElement === row">
+                <fieldset>
+                  <legend>Load Request</legend>
+                  <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
+                  <app-load-request-activity [requestId]="row.requestId"
+                                             [loadRequestActivities]="row.loadRequestActivities"></app-load-request-activity>
+                  <app-load-request-message [loadRequestMessages]="row.loadRequestMessages"></app-load-request-message>
+                </fieldset>
+              </div>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand()"></tr>
+
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand();"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === row"
+            (click)="expandedElement = expandedElement === row ? null : row;">
+        </tr>
+
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="9">
+            No results found.
+          </td>
+        </tr>
+      </table>
+    </div>
+    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 50, 100]" [pageSize]="10"
+                   (page)="handlePageEvent($event)"
+                   aria-label="Select page of load requests"></mat-paginator>
   </div>
-
-  <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 50]" [pageSize]="10"
-                 aria-label="Select page of load requests"></mat-paginator>
-</div>
+</form>
