--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -148,7 +148,7 @@
         </ng-container>
 
         <ng-container matColumnDef="creationTime">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+          <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
               <label for="creationTimeStart" class="m-2" mat-sort-header disableClear>Creation Time</label>
               <input id="creationTimeStart" matInput class="w-30" formControlName="creationTimeStart" type="date"
