--- a/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
+++ b/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
@@ -10,27 +10,27 @@
     </div>
     <table data-testid="qaActivitiesTable" mat-table [dataSource]="dataSource()" matSort multiTemplateDataRows>
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Activity ID</th>
+        <th mat-header-cell *matHeaderCellDef>Activity ID</th>
         <td mat-cell *matCellDef="let element"> {{element.id}}</td>
       </ng-container>
 
       <ng-container matColumnDef="activity">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Activity</th>
+        <th mat-header-cell *matHeaderCellDef>Activity</th>
         <td mat-cell *matCellDef="let element"> {{element.activity}} </td>
       </ng-container>
 
       <ng-container matColumnDef="availableDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>TS Available Date</th>
+        <th mat-header-cell *matHeaderCellDef>TS Available Date</th>
         <td mat-cell *matCellDef="let element"> {{element.availableDate}} </td>
       </ng-container>
 
       <ng-container matColumnDef="reason">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Reason</th>
+        <th mat-header-cell *matHeaderCellDef>Reason</th>
         <td mat-cell *matCellDef="let element"> {{element.reason}} </td>
       </ng-container>
 
       <ng-container matColumnDef="nbNotes">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> # of Notes</th>
+        <th mat-header-cell *matHeaderCellDef> # of Notes</th>
         <td mat-cell *matCellDef="let element"
             (click)="expandedElement = expandedElement === element ? null : element">
           {{element.notes.length}}
