--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -100,7 +100,7 @@
           <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="type">
+        <ng-container matColumnDef="requestType">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
               <label for="requestTypeInput" class="m-2" mat-sort-header disableClear>Request Type</label>
