--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -6,7 +6,14 @@
 
   <ng-container matColumnDef="value">
     <th mat-header-cell *matHeaderCellDef>Value</th>
-    <td mat-cell *matCellDef="let element">{{element.value}}</td>
+    <td mat-cell *matCellDef="let element">
+      <ng-container *ngIf="element.type === 'date'; else defaultCell">
+        {{element.value | date:'YYYY/MM/dd'}}
+      </ng-container>
+      <ng-template #defaultCell>
+        {{element.value}}
+      </ng-template>
+    </td>
   </ng-container>
 
   <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="h-5"></tr>
