--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -3,7 +3,7 @@
     <div class="flex justify-between">
       <mat-form-field>
         <mat-label>Any Request date</mat-label>
-        <mat-select placeholder="Any Request date" formControlName="requestDateRange">
+        <mat-select placeholder="Any Request date" formControlName="requestTime">
           <mat-option value="">Any Request date</mat-option>
           <mat-option value="today">Today's</mat-option>
           <mat-option value="thisWeek">This week's</mat-option>
@@ -104,7 +104,7 @@
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
               <label for="requestTypeInput" class="m-2" mat-sort-header disableClear>Request Type</label>
-              <select id="requestTypeInput" class="w-20" formControlName="type">
+              <select id="requestTypeInput" class="w-20" formControlName="requestType">
                 <option value="">ALL</option>
                 <option>regular</option>
                 <option>scheduled</option>
