--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -63,12 +63,7 @@
               <label for="codeSystemSearch" class="m-2" mat-sort-header disableClear>Code System Name</label>
               <select id="codeSystemSearch" class="w-20" formControlName="codeSystemName">
                 <option value="">ALL</option>
-                <option>RXNORM</option>
-                <option>LOINC</option>
-                <option>SNOMEDCT</option>
-                <option>CDCREC</option>
-                <option>CPT</option>
-                <option>HPO</option>
+                <option *ngFor="let CODE_SYSTEM_NAME of CODE_SYSTEM_NAMES">{{CODE_SYSTEM_NAME}}</option>
               </select>
             </div>
           </th>
@@ -91,9 +86,7 @@
               <label for="requestStatusInput" class="m-2" mat-sort-header disableClear>Status</label>
               <select id="requestStatusInput" class="w-20" formControlName="requestStatus">
                 <option value="">ALL</option>
-                <option>In Progress</option>
-                <option>Complete</option>
-                <option>Failed</option>
+                <option *ngFor="let LOAD_REQUEST_STATUS of LOAD_REQUEST_STATUSES">{{LOAD_REQUEST_STATUS}}</option>
               </select>
             </div>
           </th>
@@ -106,10 +99,7 @@
               <label for="requestTypeInput" class="m-2" mat-sort-header disableClear>Request Type</label>
               <select id="requestTypeInput" class="w-20" formControlName="requestType">
                 <option value="">ALL</option>
-                <option>regular</option>
-                <option>scheduled</option>
-                <option>emergency</option>
-                <option>masterJob</option>
+                <option *ngFor="let LOAD_REQUEST_TYPE of LOAD_REQUEST_TYPES">{{LOAD_REQUEST_TYPE}}</option>
               </select>
             </div>
           </th>
