--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -43,7 +43,7 @@
         <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
                          formControlName="type">
           <div class="ml-20">
-            <mat-radio-button value="regular" class="block">Regular (Unscheduled)</mat-radio-button>
+            <mat-radio-button value="Regular" class="block">Regular (Unscheduled)</mat-radio-button>
             <mat-radio-button value="emergency" class="block">Emergency (Unscheduled)</mat-radio-button>
             <mat-radio-button value="scheduled">Scheduled</mat-radio-button>
             <ng-container *ngIf="loadRequestCreationForm.get('type')?.value === 'scheduled'">
