--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -37,7 +37,7 @@
       <div class="mb-5">
         <label id="load-request-type-label" for="load-request-type-radio">Request Type</label>
         <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
-                         formControlName="type">
+                         formControlName="requestType">
           <div class="ml-20">
             <mat-radio-button *ngFor="let LOAD_REQUEST_TYPE of LOAD_REQUEST_TYPES"
                               [value]="LOAD_REQUEST_TYPE"
