--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -103,7 +103,7 @@
               </select>
             </div>
           </th>
-          <td mat-cell *matCellDef="let row">{{row.type}}</td>
+          <td mat-cell *matCellDef="let row">{{row.requestType}}</td>
         </ng-container>
 
         <ng-container matColumnDef="requestTime">
