--- a/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
+++ b/projects/ts-etl-ui/src/create-load-request-modal/create-load-request-modal.component.html
@@ -6,12 +6,8 @@
         <mat-label>Code System Name</mat-label>
         <mat-select placeholder="Code System Name" formControlName="codeSystemName">
           <mat-option value="">Select Code System</mat-option>
-          <mat-option value="RXNORM">RXNORM</mat-option>
-          <mat-option value="LOINC">LOINC</mat-option>
-          <mat-option value="SNOMEDCT">SNOMEDCT</mat-option>
-          <mat-option value="CDCREC">CDCREC</mat-option>
-          <mat-option value="CPT">CPT</mat-option>
-          <mat-option value="HPO">HPO</mat-option>
+          <mat-option *ngFor="let CODE_SYSTEM_NAME of CODE_SYSTEM_NAMES"
+                      [value]="CODE_SYSTEM_NAME">{{CODE_SYSTEM_NAME}}</mat-option>
         </mat-select>
       </mat-form-field>
       <ng-container *ngIf="loadRequestCreationForm.get('codeSystemName')?.getRawValue() as codeSystemName">
@@ -41,12 +37,12 @@
       <div class="mb-5">
         <label id="load-request-type-label" for="load-request-type-radio">Request Type</label>
         <mat-radio-group aria-label-by="load-request-type-label" id="load-request-type-radio"
-                         formControlName="type">
+                         formControlName="requestType">
           <div class="ml-20">
-            <mat-radio-button value="regular" class="block">Regular (Unscheduled)</mat-radio-button>
-            <mat-radio-button value="emergency" class="block">Emergency (Unscheduled)</mat-radio-button>
-            <mat-radio-button value="scheduled">Scheduled</mat-radio-button>
-            <ng-container *ngIf="loadRequestCreationForm.get('type')?.value === 'scheduled'">
+            <mat-radio-button *ngFor="let LOAD_REQUEST_TYPE of LOAD_REQUEST_TYPES"
+                              [value]="LOAD_REQUEST_TYPE"
+                              class="block">{{LOAD_REQUEST_TYPE}}</mat-radio-button>
+            <ng-container *ngIf="loadRequestCreationForm.get('type')?.value === 'Scheduler'">
               <mat-form-field appearance="outline" class="ml-3 dense-form-field">
                 <mat-label>Scheduled Date</mat-label>
                 <input matInput formControlName="scheduleDate" [matDatepicker]="picker"
