--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -3,7 +3,7 @@
     <div class="flex justify-between">
       <mat-form-field>
         <mat-label>Any Request date</mat-label>
-        <mat-select placeholder="Any Request date" formControlName="requestTime">
+        <mat-select placeholder="Any Request date" formControlName="filterRequestTime">
           <mat-option value="">Any Request date</mat-option>
           <mat-option value="today">Today's</mat-option>
           <mat-option value="thisWeek">This week's</mat-option>
@@ -14,7 +14,7 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>All Requests</mat-label>
-        <mat-select placeholder="All Requests" formControlName="requestType">
+        <mat-select placeholder="All Requests" formControlName="filterRequester">
           <mat-option value="">All Requests</mat-option>
           <mat-option [value]="user?.utsUser!.username">My Requests</mat-option>
         </mat-select>
@@ -109,22 +109,15 @@
         <ng-container matColumnDef="requestTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
-              <label for="requestTimeStart" class="m-2" mat-sort-header disableClear>Request Time</label>
-              <input id="requestTimeStart" matInput class="w-30" formControlName="requestTimeStart" type="date"
-                     [max]="searchCriteria.get('requestTimeEnd')?.getRawValue()">
-              <input id="requestTimeEnd" matInput class="w-30" formControlName="requestTimeEnd" type="date"
-                     [min]="searchCriteria.get('requestTimeStart')?.getRawValue()">
+              <label for="requestStartTime" class="m-2" mat-sort-header disableClear>Request Time</label>
+              <input id="requestStartTime" matInput class="w-30" formControlName="requestStartTime" type="date"
+                     [max]="searchCriteria.get('requestEndTime')?.getRawValue()">
+              <input id="requestEndTime" matInput class="w-30" formControlName="requestEndTime" type="date"
+                     [min]="searchCriteria.get('requestStartTime')?.getRawValue()">
             </div>
           </th>
           <td mat-cell
               *matCellDef="let row">{{row.requestTime.replace(' ', '') | date:'yyyy/MM/dd hh:mma':'GMT+05:00' }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="availableDate">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Available Date
-          </th>
-          <td mat-cell *matCellDef="let row">{{row.availableDate}}</td>
         </ng-container>
 
         <ng-container matColumnDef="requester">
@@ -140,11 +133,11 @@
         <ng-container matColumnDef="creationTime">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
-              <label for="creationTimeStart" class="m-2" mat-sort-header disableClear>Creation Time</label>
-              <input id="creationTimeStart" matInput class="w-30" formControlName="creationTimeStart" type="date"
-                     [max]="searchCriteria.get('creationTimeEnd')?.getRawValue()">
-              <input id="creationTimeEnd" matInput class="w-30" formControlName="creationTimeEnd" type="date"
-                     [min]="searchCriteria.get('creationTimeStart')?.getRawValue()">
+              <label for="creationStartTime" class="m-2" mat-sort-header disableClear>Creation Time</label>
+              <input id="creationStartTime" matInput class="w-30" formControlName="creationStartTime" type="date"
+                     [max]="searchCriteria.get('creationEndTime')?.getRawValue()">
+              <input id="creationEndTime" matInput class="w-30" formControlName="creationEndTime" type="date"
+                     [min]="searchCriteria.get('creationStartTime')?.getRawValue()">
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.creationTime | date:'yyyy/MM/dd hh:mma':'GMT+05:00'}}</td>
@@ -183,7 +176,7 @@
         </tr>
       </table>
     </div>
-    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 50, 100]" [pageSize]="10"
+    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 50, 100]" [pageSize]="resultsPageSize"
                    (page)="handlePageEvent($event)"
                    aria-label="Select page of load requests"></mat-paginator>
   </div>
